version, e.g. "r2012.04.05". So the go tool will always get the
latest version and a specific version can be pulled using its tag.

Changes that are not backward compatible are highligthed below
using an exclamation mark between brackets, as in "[!]".

Development version
-------------------
- sessions: FilesystemStore no longer skips saving empty sessions.
- Added package http/auth, to parse "Authorization" headers.

gorilla r2012.05.04
-------------------
- [!] pat: renamed Router.Del method to Delete. It doesn't make sense
  to shorten the HTTP method name, even less to save only three
  letters.
- [Fix] sessions: when a session option's MaxAge is less than 0,
  a date in the past is set as the value for the Expires field.
- sessions: FilesystemStore's filenames now use alphanumeric
  characters only.
- sessions: when a session is created, default Options are set,
  so that session.Options is immediately available for use.
- schema: an error that is a map[path]error is returned in case of
  conversion errors. empty values are ignored.
- Added package css/scanner, a compliant tokenizer for CSS3.

gorilla r2012.04.13
-------------------
- [!] securecookie: changed decoding order to decrypt only after
  HMAC was successfully verified. As a result existing values
  will fail to decode.
- [Fix] mux: the StrictSlash option is now ignored when a path
  prefix is used. Thanks, Vasiliy Tolstov.
- [Fix] rpc/json: DecodeClientResponse now properly returns the
  error from the RPC call, if any, instead of trying to decode the
  result. Thanks, Graham Miller.
- [Fix] color: applied a workaround for inconsistent float64 to
  uint8 conversion in x86 and x64. Thanks, Guillermo Estrada.
- Added package appengine/context: it creates a testing context
  during tests but a standard appengine.Context when built in
  production. This was extracted from appengine/sessions.

gorilla r2012.04.05
-------------------
First stable release after Go 1.